# portable_quake

./: CMakeLists.txt  readme.md
WinQuake/: CMakeLists.txt  cl_main.c  cl_parse.c  cl_tent.c  client.h  common.c  console.c  d_edge.c  d_init.c  d_local.h  d_polyse.c  d_sky.c  d_sprite.c  draw.c  host.c  host_cmd.c  mathlib.c  mathlib.h  menu.c  model.c  modelgen.h  net.h  net_loop.c  net_main.c  pr_cmds.c  pr_exec.c  quakedef.h  r_alias.c  r_bsp.c  r_draw.c  r_edge.c  r_local.h  r_main.c  r_misc.c  r_part.c  r_surf.c  sbar.c  screen.c  server.h  spritegn.h  (+10 more)
source/: anorms.h  bspfile.h  chase.c  cl_tent.c  common.c  console.c  d_part.c  d_scan.c  mathlib.c  menu.c  model.c  net_main.c  port.h  port_sdl.c  pr_cmds.c  pr_edict.c  r_draw.c  r_edge.c  r_part.c  r_sprite.c  r_surf.c  render.h  sbar.c  sv_main.c  sv_phys.c  sys.h  sys_sdl.c  vid_sdl.c
