cmake_minimum_required(VERSION 3.0)
project(quake)

find_package(sdl REQUIRED)
include_directories(${SDL_INCLUDE_DIR})

add_definitions(-D__WIN32__)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)

set(SOURCES
	source/adivtab.h
	source/anorms.h
	source/block16.h
	source/block8.h
	source/bspfile.h
	source/cdaudio.h
	source/chase.c
	source/cl_demo.c
	source/cl_input.c
	source/cl_main.c
	source/cl_parse.c
	source/cl_tent.c
	source/client.h
	source/cmd.c
	source/cmd.h
	source/common.c
	source/common.h
	source/conproc.h
	source/console.c
	source/console.h
	source/crc.c
	source/crc.h
	source/cvar.c
	source/cvar.h
	source/d_edge.c
	source/d_fill.c
	source/d_iface.h
	source/d_ifacea.h
	source/d_init.c
	source/d_local.h
	source/d_modech.c
	source/d_part.c
	source/d_polyse.c
	source/d_scan.c
	source/d_sky.c
	source/d_sprite.c
	source/d_surf.c
	source/d_zpoint.c
	source/draw.c
	source/draw.h
	source/host.c
	source/host_cmd.c
	source/input.h
	source/keys.c
	source/keys.h
	source/mathlib.c
	source/mathlib.h
	source/menu.c
	source/menu.h
	source/model.c
	source/model.h
	source/modelgen.h
	source/net.h
	source/net_loop.c
	source/net_loop.h
	source/net_main.c
	source/pr_cmds.c
	source/pr_comp.h
	source/pr_edict.c
	source/pr_exec.c
	source/progdefs.h
	source/progs.h
	source/protocol.h
	source/quakedef.h
	source/r_aclip.c
	source/r_alias.c
	source/r_bsp.c
	source/r_draw.c
	source/r_edge.c
	source/r_efrag.c
	source/r_light.c
	source/r_local.h
	source/r_main.c
	source/r_misc.c
	source/r_part.c
	source/r_shared.h
	source/r_sky.c
	source/r_sprite.c
	source/r_surf.c
	source/r_vars.c
	source/render.h
	source/sbar.c
	source/sbar.h
	source/screen.c
	source/screen.h
	source/server.h
	source/sound.h
	source/spritegn.h
	source/sv_main.c
	source/sv_move.c
	source/sv_phys.c
	source/sv_user.c
	source/sys.h
	source/sys_sdl.c
	source/vgamodes.h
	source/vid.h
	source/vid_sdl.c
	source/view.c
	source/view.h
	source/wad.c
	source/wad.h
	source/world.c
	source/world.h
	source/zone.c
	source/zone.h
	source/d_vars.c
	source/nonintel.c
	source/snd_null.c
	source/cd_null.c
	source/net_none.c
	)

add_executable(quake ${SOURCES})
target_link_libraries(quake ${SDL_LIBRARY})
